feat: refactor thread structure, new query for replies, frontend tree structure for managing discussions